--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -79,9 +79,8 @@
     <ClInclude Include="GameScreen.h" />
     <ClInclude Include="GameScreenLevel1.h" />
     <ClInclude Include="GameScreenManager.h" />
-    <ClInclude Include="Object3DS.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="OBJLoader.h" />
-    <ClInclude Include="Pyramid.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Transformation.h" />
@@ -93,9 +92,8 @@
     <ClCompile Include="GameScreen.cpp" />
     <ClCompile Include="GameScreenLevel1.cpp" />
     <ClCompile Include="GameScreenManager.cpp" />
-    <ClCompile Include="Object3DS.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
-    <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Texture2D.cpp" />
