Added menu screen

--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="GameScreenLevel1.h" />
     <ClInclude Include="GameScreenManager.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameScreenMenu.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="Texture2D.h" />
@@ -93,6 +94,7 @@
     <ClCompile Include="GameScreenLevel1.cpp" />
     <ClCompile Include="GameScreenManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameScreenMenu.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="Source.cpp" />
