--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <ClInclude Include="3DSLoader.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Commons.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="GameScreen.h" />
@@ -83,6 +84,7 @@
     <ClInclude Include="GameScreenMenu.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="SceneNode.h" />
+    <ClInclude Include="Teapot.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Transformation.h" />
     <ClInclude Include="Vector.h" />
@@ -98,6 +100,7 @@
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Teapot.cpp" />
     <ClCompile Include="Texture2D.cpp" />
     <ClCompile Include="Transformation.cpp" />
     <ClCompile Include="Vector.cpp" />
