--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="3DSLoader.h" />
     <ClInclude Include="Appearance.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Commons.h" />
@@ -85,8 +86,10 @@
     <ClInclude Include="GameScreenManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScreenMenu.h" />
+    <ClInclude Include="iInput.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="ParticleModel.h" />
+    <ClInclude Include="PlayerController.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="SoundEffects.h" />
     <ClInclude Include="TextRender.h" />
@@ -98,6 +101,7 @@
     <ClCompile Include="3DSLoader.cpp" />
     <ClCompile Include="Appearance.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="GameScreen.cpp" />
     <ClCompile Include="GameScreenLevel1.cpp" />
@@ -106,6 +110,7 @@
     <ClCompile Include="GameScreenMenu.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="ParticleModel.cpp" />
+    <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="SoundEffects.cpp" />
     <ClCompile Include="Source.cpp" />
