player controller movement with controller and SDL keystates

--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj.filters
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Interfaces">
+      <UniqueIdentifier>{5922ba1e-8a64-4916-a6de-a775312e5c0a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Library Include="SDL\SDL2main.lib" />
@@ -90,7 +93,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="iInput.h">
-      <Filter>Header Files</Filter>
+      <Filter>Interfaces</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
