--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -97,7 +97,7 @@
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="SceneNode.h" />
-    <ClInclude Include="SoundEffects.h" />
+    <ClInclude Include="SoundManager.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateFindClosestBall.h" />
     <ClInclude Include="StatePickUpBall.h" />
@@ -112,6 +112,7 @@
     <ClCompile Include="Appearance.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="GameScreen.cpp" />
     <ClCompile Include="GameScreenGameOver.cpp" />
@@ -126,7 +127,7 @@
     <ClCompile Include="ParticleModel.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="SceneNode.cpp" />
-    <ClCompile Include="SoundEffects.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="StateFindClosestBall.cpp" />
     <ClCompile Include="StatePickUpBall.cpp" />
