changed scene node so that children can be reassigned to new parents, changed collision on the character to have a sphere collision, changed soundmanager to use a map

--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -92,6 +92,8 @@
     <ClInclude Include="GameScreenMenu.h" />
     <ClInclude Include="iInput.h" />
     <ClInclude Include="ImageRender.h" />
+    <ClInclude Include="iRenderable.h" />
+    <ClInclude Include="iUpdateable.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="ParticleModel.h" />
     <ClInclude Include="PlayerController.h" />
