--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj.filters
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj.filters
@@ -128,6 +128,12 @@
     <ClInclude Include="iRenderable.h">
       <Filter>Interfaces</Filter>
     </ClInclude>
+    <ClInclude Include="Level1Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Level2Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameScreen.cpp">
@@ -214,8 +220,40 @@
     <ClCompile Include="SoundManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Level1Character.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Level2Character.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\Button_Hovered.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Images\Button_Normal.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Images\DodgeballLogo.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Images\NULL.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Textures\Court_Diffuse.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Textures\Court2_Diffuse.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Textures\Dodgeball_Diffuse.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Textures\SpaceMan_Diffuse.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
