AI character now moves towards a ball and picks it up

--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="iUpdateable.h" />
     <ClInclude Include="Level1Character.h" />
     <ClInclude Include="Level2Character.h" />
+    <ClInclude Include="Level2Enemy.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="ParticleModel.h" />
     <ClInclude Include="PlayerController.h" />
@@ -104,7 +105,8 @@
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateFindClosestBall.h" />
-    <ClInclude Include="StatePickUpBall.h" />
+    <ClInclude Include="StateReturnToBaseLine.h" />
+    <ClInclude Include="StateThrowBall.h" />
     <ClInclude Include="TextRender.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Transform.h" />
@@ -129,6 +131,7 @@
     <ClCompile Include="ImageRender.cpp" />
     <ClCompile Include="Level1Character.cpp" />
     <ClCompile Include="Level2Character.cpp" />
+    <ClCompile Include="Level2Enemy.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="ParticleModel.cpp" />
     <ClCompile Include="PlayerController.cpp" />
@@ -136,7 +139,8 @@
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="StateFindClosestBall.cpp" />
-    <ClCompile Include="StatePickUpBall.cpp" />
+    <ClCompile Include="StateReturnToBaseline.cpp" />
+    <ClCompile Include="StateThrowBall.cpp" />
     <ClCompile Include="TextRender.cpp" />
     <ClCompile Include="Texture2D.cpp" />
     <ClCompile Include="Transform.cpp" />
