--- a/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj.filters
+++ b/OpenGL_SDL Base Project/OpenGL_SDL Base Project.vcxproj.filters
@@ -113,9 +113,6 @@
     <ClInclude Include="GameScreenLevel2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="StatePickUpBall.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="StateFindClosestBall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -132,6 +129,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Level2Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Level2Enemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StateReturnToBaseLine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StateThrowBall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -208,9 +214,6 @@
     <ClCompile Include="GameScreenLevel2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StatePickUpBall.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="StateFindClosestBall.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -224,6 +227,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Level2Character.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Level2Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StateReturnToBaseline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StateThrowBall.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
